public/assets/stylesheets/main.css
/* ... */
@media only screen and (max-width: 991px) {
    .hero {
        min-height: 35dvh;
    }
    .booking {
        padding: 1.5rem 0 4rem 0;
    }
    .packages-slider-section {
        padding: 3rem 0 5.5rem;
    }
    .packages-slider .packages-slide-image {
        aspect-ratio: 16 / 10;
    }
    .packages-slider .packages-slide-title {
        font-size: 2rem;
        padding: 1.5rem 1rem;
    }
    .packages-slider-section .packages-slider .slick-dots {
        bottom: -3.5rem;
    }
    .booking form {
        grid-template-columns: repeat(2, 1fr);
    }
    .booking form > div:last-child {
        grid-column: 1 / -1;
        margin-top: 2rem;
    }
    .booking form > div:last-child button {
        max-width: fit-content;
        margin: 0 auto;
        padding: 1rem 5rem;
    }
    .accommodation {
        background: #e5ddd2;
    }
    .accommodation::after {
        display: none;
    }
    .ukus-jahorine video {
        width: unset;
    }
    .img-gallery {
        max-width: 100%;
        height: auto;
    }
    .abonos {
        min-height: 60rem;
    }
    .skijanje {
        padding: 10rem 0;
    }
    .aktivni-izazov {
        min-height: 70rem;
    }
    .special .bg {
        display: none;
    }
    .special .row {
        row-gap: 3rem;
    }
    footer .row {
        row-gap: 5rem;
    }
    footer .col-lg-6 {
        order: 3;
    }
    footer .col-lg-2:first-of-type div > a {
        max-width: fit-content;
        padding: 1rem 3rem;
    }
    .weather .weather-cards {
        flex-direction: column;
    }
    .weather .weather-cards .weather-card:first-of-type {
        width: 100%;
        min-height: 50rem;
    }
    .weather .weather-cards .weather-card:last-of-type {
        width: 100%;
    }
    .career {
        min-height: 39dvh;
    }
    .gallery {
        padding-bottom: 5rem;
    }
    .gallery .gallery-wrapper {
        grid-template-columns: repeat(5, 1fr);
    }
    .title-larger {
        font-size: 6rem;
    }
    .apartman .col-lg-5 img {
        display: none;
    }
    .apartman-2 .row:last-child {
        row-gap: 3rem;
    }
    .wellness-spa.reversed {
        padding: 8rem 0;
    }
    .wellness-spa.reversed img {
        position: absolute;
        inset: 0;
        z-index: 2;
        transform: translateY(0);
    }
    .villa-termag div img {
        position: absolute;
        z-index: 1;
        inset: 0;
        transform: translateY(0);
        width: 100%;
    }
    .career .content-wrapper {
        top: 50%;
    }

    .packages .nav-tabs .nav-link {
        font-size: 1.6rem;
    }
    .registration h3 {
        font-size: 3rem;
    }
    .packages img {
        max-width: 5.5rem;
        max-height: 5.5rem;
    }
    .packages .row div div p {
        font-size: 1.4rem;
    }
    .aktivni-izazov video,
    .ukus-jahorine video {
        height: 100%;
    }
    .get-to-know .cardd h3 {
        font-size: 2.4rem;
        margin-bottom: 1.5rem;
    }
    .ski-offers .col-md-6 .card {
        min-height: 65rem;
    }
    .ski-pass-hero {
        padding: 12rem 0 5rem 0;
    }
    .ski-info img {
        display: none;
    }
    .registration .row div div p {
        font-size: 1.4rem;
    }
    .unforgetable-experience figure img {
        max-height: 23rem;
    }
    header .navbar .navbar-nav {
        margin-top: 10rem;
    }
    .hero .overlay {
        display: none;
    }
}

@media only screen and (max-width: 769px) {
    .hero {
        min-height: 90dvh;
    }
    .hero .content-wrapper h4 {
        font-size: 1.4rem;
    }
    .accommodation {
        padding: 5rem 0;
    }
    .img-gallery {
        max-width: 100%;
        height: auto;
    }
    .villa-termag {
        padding: 5rem 0;
    }
    .txt {
        font-size: 1.6rem;
    }
    .cardd h2,
    .cardd h1 {
        font-size: 3.5rem;
    }
    .btnn {
        font-size: 1.6rem;
    }
    .cardd {
        padding: 7.5rem;
    }
    .konf-sala {
        min-height: 75rem;
    }
    .hero .content-wrapper {
        min-width: 85%;
    }
    .apartman {
        overflow: hidden;
    }
    .title {
        font-size: 4rem;
    }
    .career {
        min-height: unset;
        padding: 30rem 0;
    }
    .gallery .gallery-wrapper {
        grid-template-columns: repeat(4, 1fr);
    }
    .ski-pass-hero {
        padding: 12.5rem 0;
    }
    .how-to-buy-ski-pass {
        padding: 7.5rem 0;
    }
    .weather .weather-cards {
        row-gap: 3rem;
    }
    .konf-sala {
        min-height: unset;
        padding: 5rem 2.5rem;
    }
    .konf-sala .cardd {
        position: relative;
        transform: unset;
    }
    .container,
    .container-fluid {
        padding: 0 2rem;
    }
    .title-larger {
        font-size: 4rem;
    }
    .weather .wrapper > p {
        margin: 2rem 0;
        max-width: 100%;
    }
    .weather .wrapper {
        padding: 0;
    }
    .gallery-intro {
        padding: 12.5rem 0 5rem 0;
    }
    .organic-facts {
        padding: 12.5rem 0 5rem 0;
    }
    .packages img {
        max-width: 4rem;
        max-height: 4rem;
    }

    .eco {
        padding: 12.5rem 0 5rem 0;
    }

    .snow-height,
    .ski-centar,
    .ski-skola {
        padding: 12.5rem 0 5rem 0;
    }
    .special .col-md-6 img {
        max-width: 4rem;
        max-height: 4rem;
    }
    .experience {
        overflow: hidden;
    }
    .weather .wrapper > p,
    .career .content-wrapper p,
    .apartman .txt {
        max-width: 100%;
    }

    .hero iframe {
        width: 1920px;
        height: 931px;
    }
}
/* ... */

